team: clarify that Sam is a founder.

--- a/website/data/team/team.yaml
+++ b/website/data/team/team.yaml
@@ -2,7 +2,7 @@
   {
     'slug': 'james',
     'name': 'James Arthur',
-    'job_title': 'CEO',
+    'job_title': 'Co-founder & CEO',
     'short_bio': 'Co-founder of Hazy and Opendesk. Founding Partner Post Urban Ventures. TED Prize, $1M Microsoft Prize.',
     'image': '/img/team/james2.jpg',
     'profile_uri': 'https://www.linkedin.com/in/thruflo',
@@ -16,7 +16,7 @@
   {
     'slug': 'valter',
     'name': 'Valter Balegas',
-    'job_title': 'CTO',
+    'job_title': 'Co-founder & CTO',
     'short_bio': 'Rich-CRDTs and Just Right Consistency. Founding Engineer at Concordant. MySQL at Oracle.',
     'image': '/img/team/valter-nov-23.jpg',
     'profile_uri': 'https://www.linkedin.com/in/balegas',
@@ -30,7 +30,7 @@
   {
     'slug': 'kyle',
     'name': 'Kyle Mathews',
-    'job_title': 'CPO',
+    'job_title': 'Co-founder & CPO',
     'short_bio': 'Co-founder, CEO and CTO of GatsbyJS (acquired by Netlify). Founder of RelateRocket and Eduglu. BYU.',
     'image': '/img/team/kyle.jpg',
     'profile_uri': 'https://www.linkedin.com/in/kylemathews',
@@ -39,6 +39,20 @@
     'location': 'Salt Lake City',
     'country': 'USA',
     'flag': 'us',
+    'published': true,
+  },
+  {
+    'slug': 'sam',
+    'name': 'Sam Willis',
+    'job_title': 'Co-founder & Product Architect',
+    'short_bio': 'Multidisciplinary developer, designer and engineer. PGlite, Tetra Framework. Co-founder POSTERHASTE.',
+    'image': '/img/team/sam.jpg',
+    'profile_uri': 'https://www.linkedin.com/in/samwillis',
+    'profile_display_uri': 'in/samwillis',
+    'profile_icon': 'social-linkedin',
+    'location': 'Cambridge',
+    'country': 'England',
+    'flag': 'gb',
     'published': true,
   },
   {
@@ -70,17 +84,17 @@
     'published': true,
   },
   {
-    'slug': 'sam',
-    'name': 'Sam Willis',
+    'slug': 'stefanos',
+    'name': 'Stefanos Mousafeiris',
     'job_title': 'Founding Engineer',
-    'short_bio': 'Multidisciplinary developer, designer and engineer. PGlite, Tetra Framework. Co-founder POSTERHASTE.',
-    'image': '/img/team/sam.jpg',
-    'profile_uri': 'https://www.linkedin.com/in/samwillis',
-    'profile_display_uri': 'in/samwillis',
+    'short_bio': 'Lead Engineer at boat navigation app "savvy navvy". Quantum physics at Imperial.',
+    'image': '/img/team/stefanos.jpg',
+    'profile_uri': 'https://www.linkedin.com/in/stefanosmousafeiris',
+    'profile_display_uri': 'in/smousafeiris',
     'profile_icon': 'social-linkedin',
-    'location': 'Cambridge',
-    'country': 'England',
-    'flag': 'gb',
+    'location': 'Thessaloniki',
+    'country': 'Greece',
+    'flag': 'gr',
     'published': true,
   },
   {
@@ -112,6 +126,20 @@
     'published': true,
   },
   {
+    'slug': 'rob',
+    'name': "Rob A'Court",
+    'job_title': 'Founding Engineer',
+    'short_bio': 'Founder, CEO at distributed SQL proxy DataAccelerator. Senior Engineer at Dyad.',
+    'image': '/img/team/rob.jpg',
+    'profile_uri': 'https://www.linkedin.com/in/rob-a-court-b4a3a31',
+    'profile_display_uri': 'in/rob-a-court',
+    'profile_icon': 'social-linkedin',
+    'location': 'Brighton',
+    'country': 'England',
+    'flag': 'gb',
+    'published': true,
+  },
+  {
     'slug': 'paul',
     'name': 'Paul Harter',
     'job_title': 'Founding Engineer',
@@ -126,51 +154,9 @@
     'published': true,
   },
   {
-    'slug': 'pmp-p',
-    'name': 'Paul Peny',
-    'job_title': 'Systems Engineer',
-    'short_bio': 'Cross platform compilation and WASM expert. Maintainer of the pygame-web ecosystem.',
-    'image': '/img/team/pmp-p.jpg',
-    'profile_uri': 'https://github.com/pmp-p',
-    'profile_display_uri': '@pmp-p',
-    'profile_icon': 'social-github',
-    'location': 'Undisclosed',
-    'country': 'France',
-    'flag': 'fr',
-    'published': true,
-  },
-  {
-    'slug': 'stefanos',
-    'name': 'Stefanos Mousafeiris',
-    'job_title': 'Staff Engineer',
-    'short_bio': 'Lead Engineer at boat navigation app "savvy navvy". Quantum physics at Imperial.',
-    'image': '/img/team/stefanos.jpg',
-    'profile_uri': 'https://www.linkedin.com/in/stefanosmousafeiris',
-    'profile_display_uri': 'in/smousafeiris',
-    'profile_icon': 'social-linkedin',
-    'location': 'Thessaloniki',
-    'country': 'Greece',
-    'flag': 'gr',
-    'published': true,
-  },
-  {
-    'slug': 'rob',
-    'name': "Rob A'Court",
-    'job_title': 'Staff Engineer',
-    'short_bio': 'Founder, CEO at distributed SQL proxy DataAccelerator. Senior Engineer at Dyad.',
-    'image': '/img/team/rob.jpg',
-    'profile_uri': 'https://www.linkedin.com/in/rob-a-court-b4a3a31',
-    'profile_display_uri': 'in/rob-a-court',
-    'profile_icon': 'social-linkedin',
-    'location': 'Brighton',
-    'country': 'England',
-    'flag': 'gb',
-    'published': true,
-  },
-  {
     'slug': 'tudor',
     'name': 'Tudor Zaharia',
-    'job_title': 'Staff Engineer',
+    'job_title': 'Founding Engineer',
     'short_bio': 'HPC enthusiast. Former CTO@quitt.ch. 8 to 64bit programmer. Maker of cophone.io. PGlite ♥',
     'image': '/img/team/tudor.jpg',
     'profile_uri': 'https://www.linkedin.com/in/tdrz',
