--- a/.github/workflows/electric_telemetry_tests.yml
+++ b/.github/workflows/electric_telemetry_tests.yml
@@ -1,17 +1,13 @@
-name: Electric Telemetry CI
+name: electric-telemetry
 
 on:
   push:
     branches: ['main']
-    paths-ignore:
-      - 'website/**'
-      - '**/README.md'
-      - 'integration-tests/**'
+    paths:
+      - 'packages/electric-telemetry/**'
   pull_request:
-    paths-ignore:
-      - 'website/**'
-      - '**/README.md'
-      - 'integration-tests/**'
+    paths:
+      - 'packages/electric-telemetry/**'
 
 permissions:
   contents: read
@@ -34,14 +30,15 @@ jobs:
           version-type: strict
           version-file: '.tool-versions'
 
-      - name: Cache electric-telemetry dependencies
+      - name: Cache dependencies
         uses: actions/cache@v4
         with:
           path: packages/electric-telemetry/deps
-          key: ${{ runner.os }}-electric-telemetry-deps-${{ hashFiles('packages/electric-telemetry/mix.lock') }}
+          key: ${{ runner.os }}-electric-telemetry-deps-${{ env.MIX_ENV }}-${{ hashFiles('packages/electric-telemetry/mix.lock') }}
           restore-keys: |
-            ${{ runner.os }}-electric-telemetry-deps-${{ hashFiles('packages/electric-telemetry/mix.lock') }}
-            ${{ runner.os }}-electric-telemetry-deps-
+            ${{ runner.os }}-electric-telemetry-deps-${{ env.MIX_ENV }}-${{ hashFiles('packages/electric-telemetry/mix.lock') }}
+            ${{ runner.os }}-electric-telemetry-deps-${{ env.MIX_ENV }}
+            ${{ runner.os }}-electric-telemetry-deps
 
       - name: Cache compiled code
         uses: actions/cache@v4
@@ -49,18 +46,16 @@ jobs:
           path: |
             packages/electric-telemetry/_build/*/lib
             !packages/electric-telemetry/_build/*/lib/electric_telemetry
-          key: "${{ runner.os }}-electric-telemetry-build-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
+          key: "${{ runner.os }}-electric-telemetry-build-${{ env.MIX_ENV }}-${{ hashFiles('packages/electric-telemetry/mix.lock') }}"
           restore-keys: |
-            ${{ runner.os }}-electric-telemetry-build-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
-            ${{ runner.os }}-electric-telemetry-build-${{ env.MIX_ENV }}-
-            ${{ runner.os }}-electric-telemetry-build-
+            ${{ runner.os }}-electric-telemetry-build-${{ env.MIX_ENV }}-${{ hashFiles('packages/electric-telemetry/mix.lock') }}
+            ${{ runner.os }}-electric-telemetry-build-${{ env.MIX_ENV }}
+            ${{ runner.os }}-electric-telemetry-build
 
       - name: Install dependencies
         run: mix do deps.get + deps.compile
 
-      - name: Compile
-        # don't bail on compile warnings - let's get the results of the tests
-        # and let the formatting task check for compilation warnings
+      - name: Compile package
         run: mix compile
 
       - name: Run tests
