--- a/.github/workflows/ts_tests.yml
+++ b/.github/workflows/ts_tests.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: echo "directories=`find packages/ -mindepth 1 -maxdepth 1 -type d -exec test -e '{}'/tsconfig.json \; -print | jq -R -s -c 'split("\n")[:-1]'`" >> $GITHUB_OUTPUT
         id: list_ts_packages
+
   list_examples:
     name: List examples
     runs-on: ubuntu-latest
@@ -58,9 +59,25 @@ jobs:
       - run: pnpm -r --filter "$(jq '.name' -r package.json)^..." build
       - run: pnpm run typecheck
 
+  image_tag:
+    runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.hash.outputs.tag }}
+    steps:
+      - uses: actions/checkout@v4
+      - id: hash
+        run: |
+          echo "tag=${{ hashFiles('packages/sync-service/mix.lock', 'packages/electric-telemetry/mix.lock') }}" >> $GITHUB_OUTPUT
+
+  ensure_sync_service_image:
+    needs: image_tag
+    uses: ./.github/workflows/ensure_sync_service_image.yml
+    with:
+      tag: ${{ needs.image_tag.outputs.tag }}
+
   build_and_test_packages:
     name: 'Test ${{ matrix.package_dir }} w/ sync-service'
-    needs: [list_ts_packages]
+    needs: [list_ts_packages, ensure_sync_service_image]
     runs-on: ubuntu-latest
     # There is currently a buggy TS test that causes the job for typescript-client to get stuck
     # for 6 hours on end.
@@ -78,13 +95,26 @@ jobs:
       ELECTRIC_DATABASE_ID: ci_test_tenant
       MIX_ENV: dev
       MIX_OS_DEPS_COMPILE_PARTITION_COUNT: 4
+    services:
+      postgres:
+        image: 'ghcr.io/${{ github.repository }}/postgres:17-alpine-logical'
+        env:
+          POSTGRES_PASSWORD: password
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      sync_service:
+        image: ${{ needs.ensure_sync_service_image.outputs.image }}
+        env:
+          ELECTRIC_INSECURE: true
+          ELECTRIC_USAGE_REPORTING: false
+          DATABASE_URL: 'postgresql://postgres:password@postgres'
+        ports:
+          - 3000:3000
     steps:
       - uses: actions/checkout@v4
-
-      - uses: erlef/setup-beam@v1
-        with:
-          version-type: strict
-          version-file: '.tool-versions'
 
       - uses: pnpm/action-setup@v4
 
@@ -96,55 +126,16 @@ jobs:
       - name: Install Node dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Cache sync-service dependencies
-        uses: actions/cache@v4
-        with:
-          path: packages/sync-service/deps
-          key: "${{ runner.os }}-sync-service-deps-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
-          restore-keys: |
-            ${{ runner.os }}-sync-service-deps-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
-            ${{ runner.os }}-sync-service-deps-${{ env.MIX_ENV }}
-            ${{ runner.os }}-sync-service-deps
-
-      - name: Cache sync-service compiled code
-        uses: actions/cache@v4
-        with:
-          path: |
-            packages/sync-service/_build/*/lib
-            !packages/sync-service/_build/*/lib/electric
-          key: "${{ runner.os }}-sync-service-build-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
-          restore-keys: |
-            ${{ runner.os }}-sync-service-build-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
-            ${{ runner.os }}-sync-service-build-${{ env.MIX_ENV }}
-            ${{ runner.os }}-sync-service-build
-
-      - name: Install sync-service dependencies
-        working-directory: packages/sync-service
-        run: mix do deps.get + deps.compile
-
-      - name: Compile sync-service
-        working-directory: packages/sync-service
-        run: mix compile
-
-      - uses: JarvusInnovations/background-action@v1
-        name: Bootstrap System Under Test (SUT)
-        with:
-          run: |
-            mix start_dev
-            ELECTRIC_INSECURE=true mix run --no-halt &
-
-          wait-on: |
-            http-get://localhost:3000/v1/health?database_id=${{ env.ELECTRIC_DATABASE_ID }}
-
-          tail: true
-          log-output-resume: stderr
-          wait-for: 1m
-          log-output: true
-          log-output-if: failure
-          working-directory: packages/sync-service
-
       - name: Build Node dependencies, if any
         run: pnpm -r --filter "$(jq '.name' -r package.json)^..." build
+
+      - name: Wait for the sync-service container to reach healthy status
+        uses: stringbean/docker-healthcheck-action@v3
+        with:
+          container: ${{ job.services.sync_service.id }}
+          require-status: running
+          require-healthy: true
+          wait-time: 20
 
       - name: Run tests with coverage
         run: pnpm run coverage --run
