Enable shape deletion for TS tests on CI

--- a/.github/workflows/ts_tests.yml
+++ b/.github/workflows/ts_tests.yml
@@ -115,6 +115,7 @@ jobs:
         env:
           ELECTRIC_INSECURE: true
           ELECTRIC_USAGE_REPORTING: false
+          ELECTRIC_ENABLE_INTEGRATION_TESTING: true
           DATABASE_URL: 'postgresql://postgres:password@postgres/electric?sslmode=disable'
         ports:
           - 3000:3000
