ci: Avoid running vitest in interactive/watch mode on CI (#3593)
Starting on December 10, the [Test TS packages against sync-service
(packages/typescript-client)](https://github.com/electric-sql/electric/actions/runs/20137012761/job/57793064524#logs)
CI job started hanging until cancelled by GH Actions after 6 hours of
runtime.

<img width="2530" height="1403" alt="image"
src="https://github.com/user-attachments/assets/dd8759a1-01b7-453c-9cc9-34bc647f353d"
/>

This seems to be related to the fact that `pnpm coverage` and `pnpm
test` run in interactive mode by default. Passing the `--run`
command-line flag to those prevents this behaviour and makes sure the
process exits after it has finished running the tests.

EDIT: found the actual culprit, it's not the way we run `pnpm coverage`
but a certain test that got added in a [recent
PR](https://github.com/electric-sql/electric/pull/3564) causes the test
runner to hang. The [CI
job](https://github.com/electric-sql/electric/actions/runs/20106623917/job/57693276499)
on that PR is the first known occurrence of the "CI job stuck for 6
hours" problem.

I have reproduced it locally by running `pnpm exec vitest --coverage
"--run"`. The test runner was stuck running `test/stream.test.ts` for
some minutes, then produced the following output and exited with exit
code 1:
```
<--- Last few GCs --->

[166905:0x28ad6000]   201497 ms: Mark-Compact 4077.8 (4104.3) -> 4066.1 (4104.3) MB, pooled: 0 MB, 1656.56 / 0.00 ms  (average mu = 0.238, current mu = 0.184) allocation failure; scavenge might not succeed
[166905:0x28ad6000]   203588 ms: Mark-Compact 4074.2 (4104.8) -> 4066.1 (4100.8) MB, pooled: 4 MB, 2076.70 / 0.00 ms  (average mu = 0.120, current mu = 0.007) allocation failure; scavenge might not succeed

FATAL ERROR: Ineffective mark-compacts near heap limit Allocation failed - JavaScript heap out of memory
----- Native stack trace -----

 1: 0x72be1c node::OOMErrorHandler(char const*, v8::OOMDetails const&) [/home/alco/.asdf/install

--- a/.github/workflows/ts_tests.yml
+++ b/.github/workflows/ts_tests.yml
@@ -37,7 +37,7 @@ jobs:
         id: list_examples
 
   check_packages:
-    name: Check TS package at ${{ matrix.package_dir }}
+    name: Build and typecheck ${{ matrix.package_dir }}
     needs: [list_ts_packages]
     runs-on: ubuntu-latest
     strategy:
@@ -59,7 +59,7 @@ jobs:
       - run: pnpm run typecheck
 
   build_and_test_packages:
-    name: Test TS packages against sync-service
+    name: 'Test ${{ matrix.package_dir }} w/ sync-service'
     needs: [list_ts_packages]
     runs-on: ubuntu-latest
     # There is currently a buggy TS test that causes the job for typescript-client to get stuck
@@ -80,46 +80,51 @@ jobs:
       MIX_OS_DEPS_COMPILE_PARTITION_COUNT: 4
     steps:
       - uses: actions/checkout@v4
+
       - uses: erlef/setup-beam@v1
         with:
           version-type: strict
           version-file: '.tool-versions'
+
       - uses: pnpm/action-setup@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version-file: '.tool-versions'
           cache: pnpm
-      - run: pnpm install --frozen-lockfile
 
-      - name: Cache dependencies
+      - name: Install Node dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Cache sync-service dependencies
         uses: actions/cache@v4
         with:
           path: packages/sync-service/deps
-          key: "${{ runner.os }}-sync-service-deps-${{ env.MIX_TARGET }}-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
+          key: "${{ runner.os }}-sync-service-deps-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
           restore-keys: |
-            ${{ runner.os }}-sync-service-deps-${{ env.MIX_TARGET }}-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
-            ${{ runner.os }}-sync-service-deps-${{ env.MIX_TARGET }}-${{ env.MIX_ENV }}-
-            ${{ runner.os }}-sync-service-deps-
+            ${{ runner.os }}-sync-service-deps-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
+            ${{ runner.os }}-sync-service-deps-${{ env.MIX_ENV }}
+            ${{ runner.os }}-sync-service-deps
 
-      - name: Cache compiled code
+      - name: Cache sync-service compiled code
         uses: actions/cache@v4
         with:
           path: |
             packages/sync-service/_build/*/lib
             !packages/sync-service/_build/*/lib/electric
-          key: "${{ runner.os }}-sync-service-build-${{ env.MIX_TARGET }}-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
+          key: "${{ runner.os }}-sync-service-build-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}"
           restore-keys: |
-            ${{ runner.os }}-sync-service-build-${{ env.MIX_TARGET }}-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
-            ${{ runner.os }}-sync-service-build-${{ env.MIX_TARGET }}-${{ env.MIX_ENV }}-
-            ${{ runner.os }}-sync-service-build-
+            ${{ runner.os }}-sync-service-build-${{ env.MIX_ENV }}-${{ hashFiles('packages/sync-service/mix.lock') }}
+            ${{ runner.os }}-sync-service-build-${{ env.MIX_ENV }}
+            ${{ runner.os }}-sync-service-build
 
-      - name: Install dependencies
-        run: mix do deps.get + deps.compile
+      - name: Install sync-service dependencies
         working-directory: packages/sync-service
+        run: mix do deps.get + deps.compile
 
       - name: Compile sync-service
-        run: mix compile
         working-directory: packages/sync-service
+        run: mix compile
 
       - uses: JarvusInnovations/background-action@v1
         name: Bootstrap System Under Test (SUT)
@@ -137,9 +142,12 @@ jobs:
           log-output: true
           log-output-if: failure
           working-directory: packages/sync-service
-      - name: build dependencies, if any
+
+      - name: Build Node dependencies, if any
         run: pnpm -r --filter "$(jq '.name' -r package.json)^..." build
-      - run: pnpm coverage
+
+      - name: Run tests with coverage
+        run: pnpm run coverage --run
 
       - name: Upload coverage reports to CodeCov
         uses: codecov/codecov-action@ad3126e916f78f00edff4ed0317cf185271ccc2d
@@ -159,7 +167,7 @@ jobs:
           files: ./junit/test-report.junit.xml
 
   check_and_build_examples:
-    name: Check and build ${{ matrix.example_folder }} example
+    name: Check and build ${{ matrix.example_folder }}
     needs: [list_examples, build_and_test_packages]
     runs-on: ubuntu-latest
     strategy:
@@ -181,4 +189,4 @@ jobs:
       - run: pnpm --if-present run prepare
       - run: pnpm --if-present run typecheck
       - run: pnpm --if-present run build
-      - run: pnpm --if-present run test
+      - run: pnpm --if-present run test --run
