Look for changes in any file under packages/sync-service
I've already missed the Dockerfile itself by trying to be overly
specific with the paths touched by a commit. Better be safe and take all
the entire contents of the package directory into account when deciding
on rebuilding the Docker image. After all, we have the Docker build
cache to avoid unnecessary rebuilds.

--- a/.github/workflows/ensure_sync_service_image.yml
+++ b/.github/workflows/ensure_sync_service_image.yml
@@ -49,7 +49,7 @@ jobs:
         if: ${{ !env.TAG }}
         run: |
           echo "TAG=$(
-            git log -1 --format='%H' -- packages/electric-telemetry/ packages/sync-service/{config, lib, rel, mix.*, package.json}
+            git log -1 --format='%H' -- packages/electric-telemetry/ packages/sync-service/
           )" >> $GITHUB_ENV
 
       - name: Check if image tag already exists
