--- a/.github/workflows/ensure_sync_service_image.yml
+++ b/.github/workflows/ensure_sync_service_image.yml
@@ -3,9 +3,17 @@ name: Docker Image for sync-service
 on:
   workflow_call:
     inputs:
+      image:
+        required: false
+        type: string
+        default: ghcr.io/${{ github.repository }}/sync-service
       tag:
         required: false
         type: string
+      platforms:
+        required: false
+        type: string
+        default: linux/amd64
     outputs:
       image:
         description: 'Full image ref'
@@ -31,11 +39,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-tags: true
 
       - name: Set image ref
         id: vars
         run: |
-          echo "IMAGE=ghcr.io/${{ github.repository }}/sync-service" >> $GITHUB_ENV
+          echo "IMAGE=${{ inputs.image }}" >> $GITHUB_ENV
           echo "TAG=${{ inputs.tag }}" >> $GITHUB_ENV
 
       - name: Login to GHCR (private)
@@ -52,6 +62,13 @@ jobs:
             git log -1 --format='%H' -- packages/electric-telemetry/ packages/sync-service/
           )" >> $GITHUB_ENV
 
+      - name: Determine ELECTRIC_VERSION to pass as a build-arg to the builder
+        working-directory: packages/sync-service
+        run: |
+          echo "ELECTRIC_VERSION=$(
+            git describe --abbrev=7 --tags --always --first-parent --match '@core/sync-service@*' | sed -En 's|^@core/sync-service@||p'
+          )" >> $GITHUB_ENV
+
       - name: Check if image tag already exists
         id: exists
         run: |
@@ -61,8 +78,7 @@ jobs:
             echo "exists=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Set up buildx for advanced Docker caching
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
       - name: Build and push if missing
         if: steps.exists.outputs.exists != 'true'
@@ -71,6 +87,9 @@ jobs:
           context: packages/sync-service
           build-contexts: |
             electric-telemetry=packages/electric-telemetry
+          build-args:
+            ELECTRIC_VERSION: ${{ env.ELECTRIC_VERSION }}
+          platforms: ${{ inputs.platforms }}
           push: true
           tags: ${{ env.IMAGE }}:${{ env.TAG }}
           cache-from: type=gha
