--- a/.github/workflows/ensure_sync_service_image.yml
+++ b/.github/workflows/ensure_sync_service_image.yml
@@ -15,9 +15,18 @@ on:
         type: string
         default: linux/amd64
     outputs:
-      image:
+      image_ref:
         description: 'Full image ref'
+        value: ${{ jobs.build_image.outputs.image_ref }}
+      image:
+        description: 'The repository part of the image, without the tag'
         value: ${{ jobs.build_image.outputs.image }}
+      tag:
+        description: 'Only the tag part'
+        value: ${{ jobs.build_image.outputs.tag }}
+      digest:
+        description: 'The sha256 digest for the image produced by Docker builder'
+        value: ${{ jobs.build_image.outputs.digest }}
 
 jobs:
   build_image:
@@ -35,7 +44,10 @@ jobs:
       packages: write
 
     outputs:
+      image_ref: ${{ steps.out.outputs.image_ref }}
       image: ${{ steps.out.outputs.image }}
+      tag: ${{ steps.out.outputs.tag }}
+      digest: ${{ steps.build.outputs.digest }}
 
     steps:
       - uses: actions/checkout@v4
@@ -82,6 +94,7 @@ jobs:
 
       - name: Build and push if missing
         if: steps.exists.outputs.exists != 'true'
+        id: build
         uses: docker/build-push-action@v6
         with:
           context: packages/sync-service
@@ -98,4 +111,6 @@ jobs:
       - name: Output image ref
         id: out
         run: |
-          echo "image=${IMAGE}:${TAG}" >> $GITHUB_OUTPUT
+          echo "image_ref=${IMAGE}:${TAG}" >> $GITHUB_OUTPUT
+          echo "image=${IMAGE}" >> $GITHUB_OUTPUT
+          echo "tag=${TAG}" >> $GITHUB_OUTPUT
